<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="Kraj"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="Informacje"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonPL"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="64dp"
                    android:background="@drawable/pl" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PL"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="GOPR / TOPR :   601 100 300"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TOPR ALARMOWY:   985"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonCallPL"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/stat_sys_phone_call"
                            android:backgroundTint="@android:color/holo_green_dark"
                            android:paddingLeft="30dp"
                            android:paddingTop="10dp"
                            android:paddingRight="30dp"
                            android:paddingBottom="10dp" />

                        <Button
                            android:id="@+id/buttonSMSPL"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/ic_dialog_email"
                            android:backgroundTint="@android:color/holo_orange_light"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />

                    </LinearLayout>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonSK"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/sk" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewSK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SK"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="HZS :   18 300"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonCallSK"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/stat_sys_phone_call"
                            android:backgroundTint="@android:color/holo_green_dark"
                            android:paddingLeft="30dp"
                            android:paddingTop="10dp"
                            android:paddingRight="30dp"
                            android:paddingBottom="10dp" />

                        <Button
                            android:id="@+id/buttonSMSSK"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/ic_dialog_email"
                            android:backgroundTint="@android:color/holo_orange_light"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />
                    </LinearLayout>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonCZ"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/cz" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewCZ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CZ"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="HSCR :    +42 01 210"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonCallCZ"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/stat_sys_phone_call"
                            android:backgroundTint="@android:color/holo_green_dark"
                            android:paddingLeft="30dp"
                            android:paddingTop="10dp"
                            android:paddingRight="30dp"
                            android:paddingBottom="10dp" />

                        <Button
                            android:id="@+id/buttonSMSCZ"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/ic_dialog_email"
                            android:backgroundTint="@android:color/holo_orange_light"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />
                    </LinearLayout>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="248dp">

                <Button
                    android:id="@+id/buttonHELP"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="107dp"
                    android:background="@drawable/help" />

                <LinearLayout
                    android:layout_width="289dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHELP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/HELP"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="POGOTOWIE ROTUNKOWE: 999"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="STRAŻ POŻARNA:   998" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="POLICJA:   997" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="STRAŻ MIEJSKA:   986" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TELEFON ALARMOWY:   112"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonCallHelp"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/stat_sys_phone_call"
                            android:backgroundTint="@android:color/holo_green_dark"
                            android:paddingLeft="30dp"
                            android:paddingTop="10dp"
                            android:paddingRight="30dp"
                            android:paddingBottom="10dp" />

                        <Button
                            android:id="@+id/buttonSMSHelp"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/ic_dialog_email"
                            android:backgroundTint="@android:color/holo_orange_light"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />
                    </LinearLayout>
                </LinearLayout>

            </TableRow>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>